git-svn-id: https://subversion.assembla.com/svn/asejournaltest@2 1321697c-79dc-45c4-979a-cc5522a7f706

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,42 @@
 * text=auto !eol
+/Letter[!!-~]to[!!-~]Editor[!!-~]and[!!-~]Reviewers.docx -text
+/abstract.tex -text
+/ag_table.pdf -text
+/approach-2.tex -text
+/asej_main.tex -text
+/body.tex -text
+/conclusion.tex -text
+/example.eps -text
+/example.tex -text
+/experiment.tex -text
+/intro.tex -text
+/main-acm.tex -text
+/main.bib -text
+/motivating_example.pdf -text
+/motive_1.pdf -text
+/motive_1.png -text
+/multibug.tex -text
+/mut-dms-art.pdf -text
+/mut-dms-feq.pdf -text
+/mut-dms-raptor.pdf -text
+/mut-sdm.pdf -text
+/our_table.pdf -text
+/our_vs_ag_unix.pdf -text
+/our_vs_artmin.pdf -text
+/our_vs_fep.pdf -text
+/prelim.tex -text
+/problem.tex -text
+/pseudocode.tex -text
 /readme.textile -text
+/related.tex -text
+/reviewers[!!-~]response.docx -text
+/sdm_boxplot.pdf -text
+/sigproc.bib -text
+/singlebug.tex -text
+/spbasic.bst -text
+/spmpsci.bst -text
+/spphys.bst -text
+/svglov3.clo -text
+/svjour3.cls -text
+/threats.tex -text
+/title.tex -text
